--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 
 .tDisplay{
     position: absolute;
-    border: 2px solid black;
+    border: 1.5px solid rgba(0, 0,0, 0.5);
     border-radius: 5px;
     display: flex;
     justify-content: center;
